minor refactor and test cases

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.5'
     compile 'javax.el:javax.el-api:2.2.4'
 
+    compile 'org.springframework:spring-context:4.3.9.RELEASE'
     compile 'org.hibernate:hibernate-core:5.2.10.Final'
     compile 'org.hibernate:hibernate-entitymanager:5.2.10.Final'
     compile 'org.hibernate:hibernate-validator:5.2.1.Final'
@@ -37,7 +38,6 @@ dependencies {
 
     runtime group: 'hsqldb', name: 'hsqldb', version: '1.8.0.7'
 
-    testCompile 'org.springframework:spring-context:4.3.9.RELEASE'
     testCompile 'org.springframework:spring-test:4.3.8.RELEASE'
     testCompile 'org.codehaus.groovy:groovy-all:2.4.7'
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
