--- a/build.gradle
+++ b/build.gradle
@@ -62,9 +62,12 @@ sourceSets {
 }
 
 task integrationTest(type: Test) {
+    outputs.upToDateWhen {false}
     testClassesDir = sourceSets.integrationTest.output.classesDir
     classpath = sourceSets.integrationTest.runtimeClasspath
-    outputs.upToDateWhen {false}
+    jacoco {
+        destinationFile = file("$buildDir/jacoco/integrationTest.exec")
+    }
 }
 
 configurations {
@@ -85,9 +88,16 @@ task runJar(type: JavaExec) {
 
 jacocoTestReport {
     group = "Reporting"
+    executionData test, integrationTest
     reports {
         xml.enabled true
         csv.enabled false
         html.destination "${buildDir}/reports/coverage"
+    }
+
+    afterEvaluate {
+        classDirectories = files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: 'au/com/payroll/ui/**')
+        })
     }
 }
